--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div style="margin-top: 20px;"></div>
 
 <div>
-<a href="/music.html">
+<a href="music.html">
 <button> My Review of Arcane VOL. 1</button>
 </a>
 </div>
@@ -26,7 +26,7 @@
 <div style="margin-top: 20px;"></div>
 
 <div>
-<a href="/meetthepups.html">
+<a href="meetthepups.html">
 <button> Meet The Dogs!! </button>
 </a>
 </div>    
