--- a/404.html
+++ b/404.html
@@ -16,7 +16,7 @@
         <img src="https://c.tenor.com/ZFc20z8DItkAAAAd/tenor.gif">
         </div>
 
-        <a href="/index.html">
+        <a href="index.html">
             <button>Go Home?</button>
         </a>
     </body>
