--- a/meetthepups.html
+++ b/meetthepups.html
@@ -10,14 +10,14 @@
     </head>
     <body>
         <h1>Meet The Dogs!!</h1>
-        <img src="/images/Img2.PNG" style="border-radius: 15px;">
+        <img src="images/Img2.PNG" style="border-radius: 15px;">
         <h2>MAX</h2>
         <p>Behaviour:★★</p>
         <p>Cuteness:★★★★★★</p>
         <p>Lovability:★★★</p>
         <p>Playfulness:★★★★</p>
 
-        <img src="/images/Img1.PNG"style="border-radius: 15px;">
+        <img src="images/Img1.PNG"style="border-radius: 15px;">
         <h2>PEPPER</h2>
         <p>Behaviour:★★★</p>
         <p>Cuteness:★★★★</p>
@@ -25,14 +25,14 @@
         <p>Playfulness:★</p>
 
 
-        <img src="/images/Img3.PNG"style="border-radius: 15px;">
+        <img src="images/Img3.PNG"style="border-radius: 15px;">
         <h2>SUNNY</h2>
         <p>Behaviour:★★★★</p>
         <p>Cuteness:★★★★</p>
         <p>Lovability:★★★★★★</p>
         <p>Playfulness:★★</p>
 
-        <img src="/images/Img4.PNG"style="border-radius: 15px;">
+        <img src="images/Img4.PNG"style="border-radius: 15px;">
         <h2>SADIE</h2>
         <p>Behaviour:★★★★★</p>
         <p>Cuteness:★★★★</p>
@@ -40,7 +40,7 @@
         <p>Playfulness:★★★</p>
 
         <div style="margin-top: 20px;"></div><br>
-        <a href="/index.html">
+        <a href="index.html">
             <button>Go Home</button>
         </a>
     </body>
