--- a/music.html
+++ b/music.html
@@ -36,14 +36,12 @@ Animated Series):</h2>
 <p>	Woah this song is by Sting!? My parents love that dude, this song must be amazing, 		*puts in headphones* Wow who could have guessed! It is mid as hell and sounds just 	like every other song on the arcane soundtrack, its only redeeming characteristic is 		the fact that the violin in this track is just to incredible. 9 year old William would 			have liked it alot more: 55/100<br>
 
     <div style="margin-top: 20px;"></div>
-<a href="/rubric.html">
+<a href="rubric.html">
     <button>The Rubric I use for marking</button>
 </a>
 <div style="margin-top: 20px;"></div>
 
-<a href="/index.html">
+<a href="index.html">
     <button>Go Home</button>
 </a>
-
-    <---corvoknight-->
 </body>
