--- a/index.html
+++ b/index.html
@@ -48,3 +48,9 @@
 <a href="https://open.spotify.com/user/31gsie5jg6cbdufyaer7thsldiwy?si=zMbphCy4SEqv8YoZr1avYQ"><button style="background-color: lightgreen; color: blueviolet;"> Spotify </button></a>
 <a href="https://github.com/BOTwillplay"><button style="background-color: rgb(23, 100, 189); color: black;"> Github </button></a>
 </body>
+
+    <br>
+<footer>
+    Copyright &#169; William Downes 2025. All rights reserved. This website was created in collaberation with Hackclub.com
+</footer>
+</body>
