--- a/404.html
+++ b/404.html
@@ -20,3 +20,9 @@
             <button>Go Home?</button>
         </a>
     </body>
+        
+<br>
+<footer>
+    Copyright &#169; William Downes 2025. All rights reserved. This website was created in collaberation with Hackclub.com
+</footer>
+</body>
