--- a/meetthepups.html
+++ b/meetthepups.html
@@ -44,3 +44,9 @@
             <button>Go Home</button>
         </a>
     </body>
+
+        <br>
+<footer>
+    Copyright &#169; William Downes 2025. All rights reserved. This website was created in collaberation with Hackclub.com
+</footer>
+</body>
