--- a/music.html
+++ b/music.html
@@ -44,4 +44,11 @@ Animated Series):</h2>
 <a href="index.html">
     <button>Go Home</button>
 </a>
+    
+    <br>
+<footer>
+    Copyright &#169; William Downes 2025. All rights reserved. This website was created in collaberation with Hackclub.com
+</footer>
+    
+</body>
 </body>
