--- a/rubric.html
+++ b/rubric.html
@@ -11,4 +11,11 @@
     <body>
         <img src="images/rubrik.jpg">
         <p>This is the Rubric is use for all my music marking, feel free too screenshot and use yourself 😃</p>
+
+        <br>
+<footer>
+    Copyright &#169; William Downes 2025. All rights reserved. This website was created in collaberation with Hackclub.com
+</footer>
+</body>
+        
     </body>
