--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <a href="https://www.youtube.com/@will_i_i?si=1pl"><button style="background-color: red;"> Youtube </button></a>
 <a href="https://open.spotify.com/user/31gsie5jg6cbdufyaer7thsldiwy?si=zMbphCy4SEqv8YoZr1avYQ"><button style="background-color: lightgreen; color: blueviolet;"> Spotify </button></a>
 <a href="https://github.com/BOTwillplay"><button style="background-color: rgb(23, 100, 189); color: black;"> Github </button></a>
-</body>
+</body> <br>
 
     <br>
 <footer>
